feat: refactored package structure
